# donation_core

./: .env  Cargo.toml  makefile
migrations/: 20250625141711_create_users_table.sql
src/: main.rs
src/application/services/: mod.rs  service.rs  user_service.rs
src/application/use_cases/: contracts.rs  mod.rs
src/application/use_cases/users/: create_user.rs  delete_user.rs  get_users.rs  mod.rs  update_user.rs
src/domain/models/: user.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: connection.rs
src/infrastructure/database/repositories/: mod.rs  sqlx_product_repository.rs  sqlx_user_repository.rs  user_repository.rs
src/infrastructure/telemetry/: otel.rs
src/infrastructure/web/: mod.rs  routes.rs  user_routes.rs
