[package]
name = "donation_core"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls", "bigdecimal"] }
chrono = {version = "0.4.41", features = ["serde"]}
dotenvy = "0.15.7"
futures = "0.3.31"
async-trait = "0.1.88"
bigdecimal = { version = "0.4.8", features = ["serde"] }


uuid = { version = "1.17.0", features = ["serde", "v4"] }

sqlx-cli = { version = "0.8.6", features = ["postgres"] }

env_logger = "0.11.8"
log = "0.4.27"
